--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:users": "node ./seeds/user.seed.js",
     "start": "node --watch index.js",
     "lint": "eslint",
     "prepare": "husky install"
